crates/courier-ftp-proto-ftp/tests/snapshots/listing__listing_fixtures_snapshot@eplf__offset-ignored.txt.snap
---
source: crates/courier-ftp-proto-ftp/tests/listing.rs
expression: snapshot(&parsed)
input_file: crates/courier-ftp-proto-ftp/tests/listings/eplf/offset-ignored.txt
---
format: eplf
used_fallback_encoding: false
skipped_count: 0
entries:
  - name: utc.txt
    kind: file
    size: 1
    modified: "2024-01-31T12:00:00Z (Second)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: epoch.txt
    kind: file
    size: 2
    modified: "1970-01-01T00:00:00Z (Second)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
  - name: 2100.txt
    kind: file
    size: 3
    modified: "2100-01-01T00:00:00Z (Second)"
    permissions: ~
    owner: ~
    group: ~
    hidden: false
skipped: []
